# moiraweave-core

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  live-agent-integrations.yml  publish.yml
infra/helm/moiraweave/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
infra/helm/moiraweave/templates/: _helpers.tpl  networkpolicy.yaml  rbac.yaml
infra/helm/moiraweave/templates/api-gateway/: deployment.yaml
infra/helm/moiraweave/templates/ui/: deployment.yaml  service.yaml
infra/helm/moiraweave/templates/worker/: deployment.yaml  scaledobject.yaml
infra/helm/moiraweave/templates/workloads/: deployment.yaml  pvc.yaml  service.yaml
infra/k8s/argocd/: project.yaml
infra/k8s/external-secrets/: externalsecret-moiraweave.yaml  secretstore-aws.yaml  secretstore-gcp.yaml
infra/k8s/keda/: api-gateway-scaledobject.yaml
scripts/: demo.sh  promote-model.sh
services/api-gateway/: .env.example  Dockerfile  pyproject.toml
services/api-gateway/app/: config.py  main.py
services/api-gateway/app/dependencies/: auth.py  control_plane.py
services/api-gateway/app/models/: auth.py  workloads.py
services/api-gateway/app/routes/: auth.py  health.py  pipelines.py  workloads.py
services/api-gateway/tests/: conftest.py  test_auth.py  test_health.py  test_pipelines.py  test_search.py  test_workloads.py
services/drift-detector/app/: settings.py
services/model-sdk/: pyproject.toml
services/model-sdk/moiraweave_model_sdk/: __init__.py  base.py
services/model-sdk/tests/: test_base.py
services/shared/moiraweave_shared/: __init__.py  control_plane.py  pipeline.py  schemas.py  streams.py  workloads.py
services/step-sdk/: pyproject.toml
services/step-sdk/moiraweave_step_sdk/: __init__.py  base.py  models.py
services/worker/: .env.example  Dockerfile  pyproject.toml
services/worker/app/: agent_adapters.py  config.py  main.py  mlflow_logger.py  pipeline_consumer.py  pipeline_runner.py  run_consumer.py  workload_executor.py
services/worker/tests/: test_agent_adapters.py  test_mlflow_logger.py  test_pipeline_definition.py  test_pipeline_runner.py  test_run_consumer.py  test_transcribe.py  test_workload_executor.py
tests/e2e/: conftest.py  docker-compose.e2e.yml  test_pipeline_flow.py  test_workload_flow.py
tests/e2e/fixtures/pipelines/echo/: pipeline.yaml
tests/e2e/fixtures/workloads/echo-model/: workload.yaml
tests/e2e/mock_model/: Dockerfile
tests/e2e/mock_model/app/: main.py
tests/e2e/mock_step/: Dockerfile
tests/e2e/mock_step/app/: main.py
tests/helm/: values-workloads.yaml
tests/integration/: test_constants_alignment.py  test_workload_contracts.py
