[project]
name = "moiraweave"
version = "0.1.1"
description = "MoiraWeave runtime platform: API gateway, workers, workload adapters, and infrastructure"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = []

# Root is a virtual project: it owns dev tooling but is not itself a library.
[tool.uv]
package = false

[tool.uv.workspace]
members = ["services/*"]

[tool.uv.sources]
moiraweave-shared = { workspace = true }
moiraweave-model-sdk = { workspace = true }

[dependency-groups]
dev = [
    "moiraweave-shared",
    "moiraweave-model-sdk",
    "fakeredis>=2.26",
    "httpx>=0.28",
    "mypy>=2.0",
    "pydantic>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "ruff>=0.15",
    "pre-commit>=4.0",
    "yamllint>=1.38.0",
    "types-PyYAML>=6.0",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces flake8, isort, black)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "TCH",      # flake8-type-checking
]
ignore = ["E501"]  # line length handled by ruff format

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
# Make moiraweave-shared (editable install via .pth hook) visible to mypy.
mypy_path = ["services/shared"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["slowapi.*", "opentelemetry.*", "yaml"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["services", "tests"]
asyncio_mode = "auto"
# importlib avoids module-name collisions between same-named test packages
# across multiple service directories.
# tests/e2e requires docker-compose stack; excluded from default run.
addopts = "--cov=services --cov-report=term-missing --cov-report=xml --import-mode=importlib --ignore=tests/e2e"
markers = [
    "e2e: end-to-end tests that require the docker-compose stack (run via make test-e2e)",
    "real_agent: optional tests that require live Hermes/OpenClaw runtime endpoints",
]


[tool.coverage.run]
source = ["services"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
