[project]
name = "api-gateway"
version = "0.1.0"
description = "MoiraWeave API Gateway"
requires-python = ">=3.13"
dependencies = [
    "moiraweave-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "slowapi>=0.1.9",
    "PyJWT>=2.9",
    "bcrypt>=4.0",
    "pydantic-settings>=2.6",
    # Redis
    "redis[hiredis]>=5.0",
    # Postgres control-plane storage
    "asyncpg>=0.30",
    # Qdrant vector store (RAG/search workloads)
    "qdrant-client[fastembed]>=1.12",
    # Prometheus metrics
    "prometheus-fastapi-instrumentator>=7.0",
    # OpenTelemetry
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
]

# Virtual project: this service is not distributed as a library.
# uv installs its dependencies into the workspace virtualenv but does not
# build or install the service itself as a Python package.
[tool.uv]
package = false

[tool.uv.sources]
moiraweave-shared = { workspace = true }
