[project]
name = "moiraweave-model-sdk"
version = "0.1.0"
description = "KServe V2 protocol base classes for moiraweave workload components"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
