[project]
name = "worker"
version = "0.1.0"
description = "MoiraWeave async inference worker (Redis Streams consumer)"
requires-python = ">=3.13"
dependencies = [
    "moiraweave-shared",
    "redis[hiredis]>=5.0",
    "asyncpg>=0.30",
    "pydantic-settings>=2.14.1",
    # Qdrant vector store (RAG/search workloads)
    "qdrant-client[fastembed]>=1.12",
    # Prometheus metrics server
    "prometheus-client>=0.21",
    # MLflow — inference metrics tracking
    "mlflow>=3.0",
    # HTTP client for calling model, pipeline, and agent workloads
    "httpx>=0.28",
    # WebSocket client for OpenClaw Gateway JSON-RPC
    "websockets>=16",
]

[tool.uv]
package = false

[tool.uv.sources]
moiraweave-shared = { workspace = true }
